--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div><h1>Bhanu <br>Tic Tac Toe</h1></div>
+    <div><h1>Tic Tac Toe</h1></div>
     <div class = "container">
     <div class="game">
        <button class="box"></button>
@@ -30,6 +30,8 @@
            
         </div>
      </div>
+    <footer><p>Developed by Bhanu</p></footer>
      <script src="javascript.js"></script>
 </body>
+
 </html>
