--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
            
         </div>
      </div>
-    <footer><p>Developed by Bhanu</p></footer>
+    <footer><div><p>Developed by Bhanu</p></div></footer>
      <script src="javascript.js"></script>
 </body>
 
 </html>
+
