--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
            
         </div>
      </div>
-    <footer><div><p>Developed by Bhanu</p></div></footer>
+    <footer><div class="footer"><p>Developed by Bhanu</p></div></footer>
      <script src="javascript.js"></script>
 </body>
 
 </html>
+
 
